--- a/desktop-app/src/renderer/index.html
+++ b/desktop-app/src/renderer/index.html
@@ -13,9 +13,7 @@
         }
         #root {
             height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            width: 100vw;
         }
     </style>
 </head>
